@@ -36,6 +36,8 @@ Revision 0.2.7, released XX-09-2019
 - Added RFC8494 providing Multicast Email (MULE) over ACP 142
 - Added RFC8398 providing Internationalized Email Addresses in
   X.509 Certificates
+- Added RFC8419 providing Edwards-Curve Digital Signature Algorithm
+  (EdDSA) Signatures in the CMS
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
